# pymetro

./: .gitignore  README.md  comportamento.txt  config.py  evaluate.py  main.py  pyproject.toml  requirements.txt  state.py  train.py
components/: line.py  passenger.py  river.py  station.py  train.py
rendering/: game_renderer.py
rl_agent/: action.py  dqn_agent.py  env.py  parallel_env.py  reward.py  rl_config.py  state.py
systems/: game.py  input.py  pathfinding.py  ui.py
systems/ai/: chromosome.py  fitness.py  ga.py  ga_cache.py  headless_sim.py  operators.py
