[project]
name = "pymetro"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pygame==2.5.2",
]

[project.scripts]
pymetro = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["components*", "systems*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
